--- a/index.html
+++ b/index.html
@@ -264,6 +264,73 @@
 
     </section>
     <section>
+      <h2>Activités à Marseilles</h2>
+
+  <div class="container_activite">
+    <div class="colonne_1">
+
+      <div class="gallery_activite item1">
+        <a href="#">
+          <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="">
+
+          <div class="desc">Vieux Port</div>
+        </a>
+      </div>
+
+    </div>
+
+    <div class="colonne_2">
+
+      <div class="gallery_activite item2">
+        <a href="#">
+          <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
+
+          <div class="desc">Fort de Pomègues</div>
+        </a>
+      </div>
+
+
+      <div class="gallery_activite item3">
+        <a href="#">
+          <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="">
+
+          <div class="desc">Île du Frioul</div>
+        </a>
+      </div>
+    
+    </div>
+
+    <div class="colonne_3">
+      <div class="gallery_activite item4">
+        <a href="#">
+          <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
+
+          <div class="desc">Parc National des Calanques</div>
+        </a>
+      </div>
+    </div>
+
+
+    <div class="colonne_4">
+      <div class="gallery_activite item5">
+        <a href="#">
+          <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
+
+          <div class="desc">Notre-Dame-de-la-Garde</div>
+        </a>
+      </div>
+
+      <div class="gallery_activite item6">
+        <a href="#">
+          <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="">
+
+          <div class="desc">Parc Longchamp</div>
+        </a>
+      </div>
+    </div>
+
+  </div>
+
 
     </section>
     <footer>
