--- a/index.html
+++ b/index.html
@@ -334,6 +334,25 @@
 
     </section>
     <footer>
+      <div class="container_footer">
+        <div class="a_propos">
+          <h3>A propos</h3>
+          <a href="#">Fonctionnement du Site</a>
+          <a href="#">Conditions générales de vente</a>
+          <a href="#">Données et confidentialité</a>
+        </div>
+        
+        <div class="nos_hebergement">
+          <h3>Nos Hébergments</h3>
+          <a href="#">Charte qualité</a>
+          <a href="#">Soumettre votre hôtel</a>
+        </div>
+        <div class="assistance">
+          <h3>Assistance</h3>
+          <a href="#">Centre d'aide</a>
+          <a href="#">Nous contacter</a>
+        </div>
+      </div>
 
     </footer>
 
