--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page d'accueil</title>
+  <meta name="description" content="Reservation en ligne hotel ou auberge" />
+  <title>Reservia </title>
+  <link rel="icon" type="image/png" href="logo/favicon.png">
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="images/icones/font/css/all.css">
@@ -197,7 +199,7 @@
               </div>
             </a>
           </div>
-          <div class="afficherplus"><a href="#">afficher plus</a></div>
+          <div class="afficherplus"><a href="#">Afficher plus</a></div>
         </div>
 
         <div class="container_aside">
